<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add_reminder_fragment">
    <EditText
        android:layout_gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:layout_weight="1"
        android:id="@+id/add_reminder_edit"/>
    <Button
        android:layout_gravity="right"
        android:layout_weight="0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_reminder_button"
        android:text="@string/add"/>
</LinearLayout>