<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clear_icon"
        android:src="@drawable/ic_content_clear"
        android:layout_weight="0"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reminders_text_view"
        android:layout_gravity="center_vertical|end"
        android:textAlignment="viewEnd"
        android:layout_weight="1"/>
</LinearLayout>